@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.321 2006/03/02 12:25:48 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.322 2006/03/06 16:05:12 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -274,6 +274,9 @@ PH/53 This is related to PH/52, but is more general: for any failing address,
 
 PH/54 Added control=allow_auth_unadvertised, as it seems there are clients that
       do this, and (what is worse) MTAs that accept it.
+
+PH/55 Added the add_header modified to ACLs. The use of "message" with "warn"
+      will now be deprecated.
 
 
 Exim version 4.60
